--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "components/jquery": "^3.2",
         "fideloper/proxy": "~3.3",
         "fortawesome/font-awesome": "^4.7",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mobiledetect/mobiledetectlib": "^2.8",
