--- a/.env-example
+++ b/.env-example
@@ -27,3 +27,5 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+REDUNDANT_NODES=0.0.0.0:7076|0.0.0.1:7077|0.0.0.2:7080
